[package]
name = "bullmq-rs"
version = "2.0.0"
edition = "2021"
authors = ["Thomas Bogard <thom.bogard@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust implementation of BullMQ - Redis-based distributed job queue"
readme = "README.md"
homepage = "https://github.com/bogardt/bullmq_rust"
repository = "https://github.com/bogardt/bullmq_rust"
keywords = ["bullmq", "redis", "queue", "job", "async"]
categories = ["asynchronous", "database"]

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

[[example]]
name = "basic_queue"
path = "examples/basic_queue.rs"

[[example]]
name = "basic_worker"
path = "examples/basic_worker.rs"
